Fixed margin on the left, added flexwrap to cards

--- a/src/index.scss
+++ b/src/index.scss
@@ -9,3 +9,17 @@
 .organizationNameInfoWindow {
   font-style: italic;
 }
+
+main.container {
+  margin: 0px;
+  padding: 5px;
+}
+
+.card {
+  width: fit-content;
+}
+
+.contactsContainer {
+  display: flex;
+  flex-wrap: wrap;
+}
